Add font preload

--- a/themes/freeston/html/base.html
+++ b/themes/freeston/html/base.html
@@ -6,6 +6,9 @@
     <title>{{title}}</title>
     <link rel="canonical" href="{{site-url}}{{uri}}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preload" as="font" href="/fonts/FiraSansCondensed-Light.woff" type="font/woff" crossorigin="anonymous">
+    <link rel="preload" as="font" href="/fonts/FiraSansCondensed-Regular.woff" type="font/woff" crossorigin="anonymous">
+    <link rel="preload" as="font" href="/fonts/FiraSansCondensed-SemiBold.woff" type="font/woff" crossorigin="anonymous">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/styles/default.min.css">
     {% style "css/base.css" %}
   </head>
