Bring in hljs style into main css file

--- a/themes/freeston/html/base.html
+++ b/themes/freeston/html/base.html
@@ -9,8 +9,7 @@
     <link rel="preload" as="font" href="/fonts/FiraSansCondensed-Light.woff2" type="font/woff2" crossorigin>
     <link rel="preload" as="font" href="/fonts/FiraSansCondensed-Regular.woff2" type="font/woff2" crossorigin>
     <link rel="preload" as="font" href="/fonts/FiraSansCondensed-SemiBold.woff2" type="font/woff2" crossorigin>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/styles/default.min.css">
-    {% style "/css/base.css" %}
+    {% style "/css/style.css" %}
   </head>
   <body>
     <div><a href="{{index-uri}}" class="freeston-title title-link">freeston.me</a></div>
