--- a/themes/freeston/html/post-content.html
+++ b/themes/freeston/html/post-content.html
@@ -8,6 +8,7 @@
 </div>
 <div>
   {% if post.toc %}{{post.toc|safe}}{% endif %}
+  {% if post.image|not-empty %}<p><img src="{{post.image}}"></p>{% endif %}
   {{post.content|safe}}
 </div>
 {% if post.tags|not-empty %}
